src/test/deca/syntax/valid/test_synt/variables/readint_assign.deca
// Description:
//    Test de fonction readint assigné a une variable
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
// Historique:
//    cree le 11/01/2022

{
    int x;
    x = readint();
}