src/test/deca/syntax/invalid/test_synt/hello_world/appel_fonction_imbrique.deca
// Description:
//    Test de fonction imbriquées.
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur de syntax --> print dans un print 
//
// Historique:
//    cree le 05/01/2022

{
    println(println());
}